correcting the wrong width on project images

--- a/sass/components/_projects-wrapper.scss
+++ b/sass/components/_projects-wrapper.scss
@@ -37,7 +37,7 @@
 
 
     img {
-      width: 300;
+      width: 100%;
       height: 60%;
       object-fit: contain;
     }
